# TensorRT

./: .gitignore
tools/experimental/trt-to-stablehlo/: CMakeLists.txt  README.md
tools/experimental/trt-to-stablehlo/include/: CMakeLists.txt
tools/experimental/trt-to-stablehlo/include/TRT/: CMakeLists.txt  Passes.h  Passes.td  SliceModeEmitter.h  TRTDialect.h  TRTDialect.td  TRTOps.h  TRTOps.td
tools/experimental/trt-to-stablehlo/lib/: CMakeLists.txt
tools/experimental/trt-to-stablehlo/lib/Conversion/: CMakeLists.txt
tools/experimental/trt-to-stablehlo/lib/Conversion/TRTToStablehlo/: CMakeLists.txt  DynSliceConverter.cpp  FoldDynamicToStatic.cpp  SliceConverter.cpp  TRTToStablehlo.cpp
tools/experimental/trt-to-stablehlo/lib/TRT/: CMakeLists.txt  TRTDialect.cpp  TRTOps.cpp
tools/experimental/trt-to-stablehlo/python/: comparison.py  dyn_e2e_verify.py  e2e_verify.py  jax_reference.py  oracle.py
tools/experimental/trt-to-stablehlo/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tools/experimental/trt-to-stablehlo/test/Conversion/: dyn_slice.mlir  slice.mlir
tools/experimental/trt-to-stablehlo/tools/: CMakeLists.txt
tools/experimental/trt-to-stablehlo/tools/trt-opt/: CMakeLists.txt  trt-opt.cpp
